# DIVSHOT

./: .gitignore  CMakeLists.txt  README.md  premake-dependencies.lua  premake5.lua
application/diverseshot-cli/: CMakeLists.txt  diverse_log.txt  premake5.lua
application/diverseshot-cli/source/: gs_train.cpp  gs_train.hpp  main.cpp
application/editor/: CMakeLists.txt  diverse_log.txt  diverseshot.rc  dvui.ini  premake5.lua  resource.h  resource1.h
application/editor/source/: brush_tool.cpp  brush_tool.h  console_panel.cpp  console_panel.h  diverse_editor.cpp  edit_op.h  editor.cpp  editor.h  editor_panel.h  embed_resources.cpp  embed_resources.h  file_browser_panel.cpp  file_browser_panel.h  gaussian_edit.cpp  gaussian_edit.h  helper_panel.cpp  helper_panel.h  hierachy_panel.cpp  hierarchy_panel.h  histogram_panel.cpp  histogram_panel.h  html_view_template.hpp  image_op.cpp  image_op.h  image_paint.cpp  image_paint.h  img2d_dataset_panel.cpp  img2d_dataset_panel.h  imgui_console_sink.h  inspector_panel.cpp  inspector_panel.h  keyframe_panel.cpp  keyframe_panel.h  pivot.h  post_process_panel.cpp  post_process_panel.h  progress_bar.cpp  progress_bar.h  redo_undo_system.cpp  redo_undo_system.h  (+13 more)
diverse/: CMakeLists.txt  premake5.lua
diverse/assets/shaders/: blit_color_alpha_mask.hlsl  blur.hlsl  build_sky_env_map.hlsl  calculate_reprojection_map.hlsl  clear_alpha.hlsl  converage_uvmap.hlsl  convolve_cube.hlsl  copy_blit.hlsl  extract_half_res_gbuffer_view_normal_rgba8.hlsl  final_blit.hlsl  full_quad_vs.hlsl  light_gbuffer.hlsl  point_cloud_ps.hlsl  point_cloud_vs.hlsl  rasterize_gbuffer_ps.hlsl  rasterize_gbuffer_vs.hlsl  rasterize_wireframe_ps.hlsl  rasterize_wireframe_vs.hlsl  rev_blur.hlsl  sky_render.hlsl
diverse/assets/shaders/debug_draw/: batch2d_line_ps.hlsl  batch2d_line_vs.hlsl  batch2d_point_ps.hlsl  batch2d_point_vs.hlsl  batch2d_ps.hlsl  batch2d_vs.hlsl  grid_ps.hlsl  grid_vs.hlsl
diverse/assets/shaders/gaussian/: clear_points.hlsl  gaussian_common.hlsl  gs_color_point_vs.hlsl  gs_ellipsoid_ps.hlsl  gs_ellipsoid_vs.hlsl  gs_point_gs.hlsl  gs_point_ps.hlsl  gs_point_vs.hlsl  gsplat_crop.hlsl  gsplat_direction.hlsl  gsplat_gs.hlsl  gsplat_intersect.hlsl  gsplat_mlp_combine.hlsl  gsplat_mlp_infer_color.hlsl  gsplat_mlp_infer_opacity.hlsl  gsplat_mlp_infer_scale_rot.hlsl  gsplat_outline.hlsl  gsplat_outline_ps.hlsl  gsplat_pick_ps.hlsl  gsplat_pick_vs.hlsl  gsplat_ps.hlsl  gsplat_reset.hlsl  gsplat_sh.hlsl  gsplat_viewz_cs.hlsl  gsplat_vs.hlsl  prepare_dispatch_args.hlsl
diverse/assets/shaders/gpu_sort/: dispatch_args.hlsl  down_sweep.hlsl  down_sweep_indirect.hlsl  init_radix_sort.hlsl  scan.hlsl  scan_indirect.hlsl  sort_common.hlsl  unsweep.hlsl  unsweep_indirect.hlsl
diverse/assets/shaders/inc/: atmosphere.hlsl  bindless.hlsl  bindless_textures.hlsl  brdf.hlsl  brdf_lut.hlsl  frame_constants.hlsl  hash.hlsl  layered_brdf.hlsl  math.hlsl  math_const.hlsl  mesh.hlsl  monte_carlo.hlsl  pack_unpack.hlsl  random.hlsl  reservoir.hlsl  rt.hlsl  samplers.hlsl  sun.hlsl  utils.hlsl
diverse/assets/shaders/ircache/: ircache_draw_debug.hlsl  ircache_grid.hlsl  ircache_trace_common.inc.hlsl  lookup.hlsl  lookup_entry.hlsl  raster_origins_ps.hlsl  raster_origins_vs.hlsl
diverse/assets/shaders/lighting/: sample_lights.rgen.hlsl
diverse/assets/shaders/lut/: brdf_fg.hlsl
diverse/assets/shaders/rt/: pick.rchit.hlsl  (+9 more)
diverse/diverse_base/: CMakeLists.txt  premake5.lua
diverse/source/: diverse.h  external_build.cpp  external_build.mm  precompile.h
diverse/source/animation/: animation.cpp  animation.h  skeleton.cpp  skeleton.h
diverse/source/assets/: asset.h  asset_manager.cpp  asset_manager.h  embed_asset.cpp  embed_asset.h  font.cpp  font.h  gaussian_model.cpp  gaussian_model.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_factory.cpp  mesh_factory.h  mesh_model.cpp  mesh_model.h  msdf_data.h  point_cloud.cpp  point_cloud.h  splat_color_palette.cpp  splat_color_palette.h  splat_transform_palette.cpp  splat_transform_palette.h  texture.cpp  texture.h
diverse/source/engine/: application.cpp  application.h  core_system.cpp  core_system.h  dialog_window.h  engine.cpp  engine.h  entry_point.h  file_system.cpp  file_system.h  input.cpp  input.h  key_codes.h  os.cpp  os.h  window.cpp  window.h
diverse/source/events/: application_event.h  event.h  key_event.cpp  key_event.h  mouse_event.h
diverse/source/imgui/: ImUserConfig.h  imgui_asset.h  imgui_cmd_variable.h  imgui_ent_editor.h  imgui_helper.cpp  imgui_helper.h  imgui_manager.cpp  imgui_manager.h  imgui_pie_menu.cpp  imgui_pie_menu.h  imgui_renderer.cpp  imgui_renderer.h  metal_imgui_renderer.h  metal_imgui_renderer.mm  vk_imgui_renderer.cpp  vk_imgui_renderer.h
diverse/source/maths/: bounding_box.cpp  bounding_box.h  bounding_sphere.cpp  bounding_sphere.h  frustum.cpp  frustum.h  maths_basic_types.h  maths_log.hpp  maths_serialisation.h  maths_utils.cpp  maths_utils.h  plane.cpp  plane.h  random.cpp  random.h  ray.cpp  ray.h  rect.cpp  rect.h  transform.cpp  transform.h
diverse/source/model_loader/: fbx_loader.cpp  gltf_loader.cpp  obj_loader.cpp  ply_loader.cpp
diverse/source/renderer/: blue_noise.cpp  blue_noise.h  debug_render_pass.cpp  debug_render_pass.h  debug_renderer.cpp  debug_renderer.h  defered_renderer.cpp  defered_renderer.h  dlss.cpp  dof.cpp  frame_constants.h  gaussian.cpp  gaussian.h  gbuffer_depth.cpp  gbuffer_depth.h  glass.cpp  glass.h  gpu_sort.cpp  grid_renderer.cpp  grid_renderer.h  half_res.cpp  irache.cpp  irache.h  light.h  lighting.cpp  lighting.h  lut_renderer.cpp  lut_renderer.h  mesh_pick.cpp  motion_blur.cpp  parallel_reduce.cpp  parallel_scan.cpp  path_tracing.cpp  point_render.cpp  point_render.h  post_process.cpp  post_process.h  prefix_scan.cpp  radiance_cache.cpp  radiance_cache.h  (+21 more)
diverse/source/scene/: entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  entity_manager.cpp  entity_manager.h  isystem.h  mesh_light.h  scene.cpp  scene.h  scene_graph.cpp  scene_graph.h  scene_manager.cpp  scene_manager.h  serialisation.h  sun_controller.h  system_manager.h
(+359 files in other folders)
